fix for tooltip over a modal (note: modal z-index = 1050)

--- a/packages/components/src/theme/overlay.scss
+++ b/packages/components/src/theme/overlay.scss
@@ -1,6 +1,6 @@
 .tooltip.lk-tooltip,
 .popover.lk-popover {
-    z-index: 1000;
+    z-index: 1100;
 }
 
 .tooltip.lk-tooltip {
